fix: :bug: add top margin to flex container for improved spacing due to absolute navbar positioning

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -217,6 +217,7 @@
     display: flex;
     gap: 0px;
     margin: 0px;
+    margin-top: 40px;
 
     &__video {
         width: 50dvw;
